# heart_valves

./: CMakeLists.txt  CirculationModel.cpp  CirculationModel.h  CirculationModel_RV_PA.cpp  CirculationModel_RV_PA.h  CirculationModel_aorta.cpp  CirculationModel_aorta.h  CirculationModel_la.cpp  CirculationModel_with_lv.cpp  CirculationModel_with_lv.h  FeedbackForcer.cpp  FeedbackForcer.h  FourierBodyForce.cpp  FourierBodyForce.h  Makefile  README.md  add_chordae.m  boundary_condition_util.cpp  boundary_condition_util.h  build_2d_trees.m  build_3d_trees.m  build_jacobian.m  build_jacobian_commissure.m  build_jacobian_component.m  build_reference_surface.m  build_reference_surface_commissure.m  check_commissure_ref_surf.m  check_component_jacobian_taylor_series.m  check_cone.m  check_cone_2d_topology.m  check_data_movement.m  check_jacobian_commissure.m  check_jacobian_taylor_series.m  check_pressure_curve.m  compute_flux_visit.py  compute_intersection.m  compute_intersection_commissure.m  cone_filter.m  cone_filter_inv.m  cone_filter_right_cone.m  (+87 more)
elasticity_related/: exponential_rates_may_newman_2009.m
plot_code/: plot_aortic_65595790_384_4495be5.m  plot_aortic_movie_files.m
pressure_curves/: atrial_p.m  check_fourier_series_read.m  check_papillary_movement.m  compliance_la.m  compute_rcr_values.py  compute_rcr_values_rvpa.py  diastolic_p_experiments.m  eval_bezier_curve_on_path.m  fish_pressures.m  fourier_series.m  fourier_series_function_handle.m  fourier_series_uniform.m  lv_exp_data_process.m  lv_la_aorta_pressures.m  lv_model_checks.m  many_pressures.m  n_tests_fourier.m  output_series_coeffs_to_txt.m  output_series_to_parser_format.m  plot_CLA.m  rv_pa_box_tester_pressures.m  save_three_cycles_ventricle.m  series_and_smooth.m  sin_bc_moving.m  solve_lv_ao_lpn.m  svg_curve_to_points.m  ventricular_pressure_yellin.m  write_ventricular_pressure.m
scripts/: add_faces.py  add_velocity_to_particle_paths.py  bicuspid_slices_paraview.py  bicuspid_slices_paraview_paper.py  bicuspid_slices_paraview_vertical.py  combine_mesh_convert_points.py  concatenate_flow_trace_and_render.py  convert_csv_with_cells.py  convert_vtu_vertices_to_csv.py  export_eulerian_visit_to_vtk.py  export_lag_visit_to_vtk.py  fix_pvd_files.py  fix_visit_files_automatic.py  input_aortic_192  (+85 more)
(+283 files in other folders)
